# https://python-poetry.org/docs/pyproject/#poetry-and-pep-517
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# https://python-poetry.org/docs/pyproject/
[tool.poetry]
name = "{{ cookiecutter.package_name|slugify }}"
version = "0.0.0"
description = "{{ cookiecutter.package_description }}"
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"]
readme = "README.md"
repository = "{{ cookiecutter.package_url }}"

# https://commitizen-tools.github.io/commitizen/config/
[tool.commitizen]
bump_message = "bump(release): v$current_version → v$new_version"
tag_format = "v$version"
update_changelog_on_bump = true
version = "0.0.0"
version_files = ["pyproject.toml:version"]
{%- if cookiecutter.with_typer_cli|int %}

# https://python-poetry.org/docs/pyproject/#scripts
[tool.poetry.scripts]
{{ cookiecutter.package_name|slugify }} = "{{ cookiecutter.package_name|slugify|replace('-', '_') }}.cli:app"
{%- endif %}

# https://python-poetry.org/docs/dependency-specification/
[tool.poetry.dependencies]
{%- if cookiecutter.with_fastapi_api|int or cookiecutter.with_streamlit_app|int %}
coloredlogs = "^15.0.1"
{%- endif %}
{%- if cookiecutter.with_fastapi_api|int %}
fastapi = "^0.70.1"
gunicorn = "^20.1.0"
{%- endif %}
{%- if cookiecutter.with_fastapi_api|int or cookiecutter.with_streamlit_app|int %}
poethepoet = "^0.12.2"
{%- endif %}
python = "^3.8.12"
{%- if cookiecutter.with_pydantic_typing|int %}
pydantic = "^1.9.0"
{%- endif %}
{%- if cookiecutter.sentry_dsn %}
sentry-sdk = "^1.5.1"
{%- endif %}
{%- if cookiecutter.with_streamlit_app|int %}
streamlit = "^1.3.0"
{%- endif %}
{%- if cookiecutter.with_typer_cli|int %}
typer = "^0.4.0"
{%- endif %}
{%- if cookiecutter.with_fastapi_api|int %}
uvicorn = { extras = ["standard"], version = "^0.16.0" }
{%- endif %}

# https://python-poetry.org/docs/master/managing-dependencies/
# TODO: Split in `tool.poetry.group.dev` and `tool.poetry.group.test` when Poetry 1.2.0 is released.
[tool.poetry.dev-dependencies]
bandit = "1.7.2"
black = "^22.1.0"
commitizen = "^2.20.2"
coverage = { extras = ["toml"], version = "^6.2" }
cruft = "^2.10.1"
darglint = "^1.8.1"
flake8 = "^4.0.1"
flake8-comprehensions = "^3.7.0"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^22.1.11"
flake8-mutable = "^1.2.0"
flake8-pytest-style = "^1.6.0"
flake8-rst-docstrings = "^0.2.5"
flake8-tidy-imports = "^4.5.0"
flake8-use-fstring = "^1.3"
flake8-print = "^4.0.0"
isort = "^5.10.1"
{%- if cookiecutter.with_jupyter_lab|int %}
jupyterlab = "^3.2.5"
{%- endif %}
mypy = "^0.931"
pdoc = "^10.0.0"
pep8-naming = "^0.12.1"
{%- if not cookiecutter.with_fastapi_api|int and not cookiecutter.with_streamlit_app|int %}
poethepoet = "^0.12.2"
{%- endif %}
pre-commit = "^2.16.0"
pydocstyle = { extras = ["toml"], version = "^6.1.1" }
pytest = "^6.2.5"
pytest-clarity = "^1.0.1"
pytest-mock = "^3.6.1"
pytest-xdist = "^2.5.0"
pyupgrade = "^2.29.1"
safety = "^1.10.3"
shellcheck-py = "^0.8.0"
{%- if cookiecutter.private_package_repository_name %}

# https://python-poetry.org/docs/repositories/#using-a-private-repository
[[tool.poetry.source]]
name = "{{ cookiecutter.private_package_repository_name|lower }}"
url = "{{ cookiecutter.private_package_repository_url }}"
{%- endif %}

# https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#configuration-via-a-file
[tool.black]
line-length = 100

# https://coverage.readthedocs.io/en/latest/config.html#report
[tool.coverage.report]
fail_under = 50
show_missing = true
skip_covered = true

# https://coverage.readthedocs.io/en/latest/config.html#run
[tool.coverage.run]
branch = true
command_line = "--module pytest src tests"
data_file = "reports/.coverage"
source = ["src"]

# https://coverage.readthedocs.io/en/latest/config.html#xml
[tool.coverage.xml]
output = "reports/coverage.xml"

# https://pycqa.github.io/isort/docs/configuration/profiles/
[tool.isort]
known_first_party = "tests"
line_length = 100
profile = "black"

# https://mypy.readthedocs.io/en/latest/config_file.html
[tool.mypy]
junit_xml = "reports/mypy.xml"
{%- if cookiecutter.with_fastapi_api|int or cookiecutter.with_pydantic_typing|int or cookiecutter.with_typer_cli|int %}
plugins = "pydantic.mypy"
{%- endif %}
strict = true
disallow_subclassing_any = false
disallow_untyped_decorators = false
ignore_missing_imports = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
warn_unreachable = true
{%- if cookiecutter.with_fastapi_api|int or cookiecutter.with_pydantic_typing|int or cookiecutter.with_typer_cli|int %}

# https://pydantic-docs.helpmanual.io/mypy_plugin/#configuring-the-plugin
[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true
{%- endif %}

# http://www.pydocstyle.org/en/latest/usage.html#configuration-files
[tool.pydocstyle]
convention = "numpy"

# https://docs.pytest.org/en/latest/customize.html#adding-default-options
[tool.pytest.ini_options]
addopts = "-W error -W ignore::DeprecationWarning --doctest-modules --exitfirst --verbosity=2 --junitxml=reports/pytest.xml"
junit_family = "xunit2"
testpaths = "tests"

# https://github.com/nat-n/poethepoet
[tool.poe.tasks]
{%- if cookiecutter.with_fastapi_api|int %}

  [tool.poe.tasks.dev]
  help = "Serve a REST API in development"
  cmd = """
    uvicorn
      --host 0.0.0.0
      --port $port
      --reload
      {{ cookiecutter.package_name|slugify|replace('-', '_') }}.api:app
    """

    [[tool.poe.tasks.dev.args]]
    help = "Bind socket to this port (default: 8000)"
    name = "port"
    options = ["--port"]
    default = "8000"
{%- endif %}

  [tool.poe.tasks.docs]
  help = "Generate this package's docs"
  cmd = """
    pdoc
      --docformat $docformat
      --output-directory $outputdirectory
      {{ cookiecutter.package_name|slugify|replace('-', '_') }}
    """

    [[tool.poe.tasks.docs.args]]
    help = "The docstring flavor (default: numpy)"
    name = "docformat"
    options = ["--docformat"]
    default = "numpy"

    [[tool.poe.tasks.docs.args]]
    help = "The output directory (default: docs)"
    name = "outputdirectory"
    options = ["--output-directory"]
    default = "docs"
  
  [tool.poe.tasks.install]
  help = "Install this package's Python environment"

    [[tool.poe.tasks.install.sequence]]
    cmd = "poetry install --no-interaction"

    [[tool.poe.tasks.install.sequence]]
    cmd = """
      pre-commit install
        --install-hooks
        --hook-type commit-msg
        --hook-type pre-commit
      """
{%- if cookiecutter.with_jupyter_lab|int %}

  [tool.poe.tasks.lab]
  help = "Run Jupyter Lab"

    [[tool.poe.tasks.lab.sequence]]
    cmd = "mkdir -p notebooks"

    [[tool.poe.tasks.lab.sequence]]
    cmd = """
      jupyter lab
        --allow-root
        --notebook-dir notebooks
      """
{%- endif %}

  [tool.poe.tasks.lint]
  help = "Lint this package"

    [[tool.poe.tasks.lint.sequence]]
    cmd = """
      pre-commit run
        --all-files
        --color always
      """

    [[tool.poe.tasks.lint.sequence]]
    shell = "safety check --full-report || true"
{%- if cookiecutter.with_fastapi_api|int %}

  [tool.poe.tasks.serve]
  help = "Serve a REST API in production"
  cmd = """
    gunicorn 
      --access-logfile -
      --bind 0.0.0.0:$port
      --graceful-timeout 10
      --keep-alive 10
      --log-file -
      --timeout 30
      --worker-class uvicorn.workers.UvicornWorker
      --worker-tmp-dir /dev/shm
      --workers 2
      {{ cookiecutter.package_name|slugify|replace('-', '_') }}.api:app
    """

    [[tool.poe.tasks.serve.args]]
    help = "Bind socket to this port (default: 8000)"
    name = "port"
    options = ["--port"]
    default = "8000"
{%- endif %}
{%- if cookiecutter.with_streamlit_app|int %}

  [tool.poe.tasks.streamlit]
  help = "Serve a Streamlit app"
  cmd = """
    streamlit run
      --browser.gatherUsageStats false
      --server.address 0.0.0.0
      --server.port $port
      --theme.base light
      streamlit_app.py
    """

    [[tool.poe.tasks.streamlit.args]]
    help = "Bind socket to this port (default: 8000)"
    name = "port"
    options = ["--port"]
    default = "8000"
{%- endif %}

  [tool.poe.tasks.test]
  help = "Test this package"

    [[tool.poe.tasks.test.sequence]]
    cmd = "coverage run"

    [[tool.poe.tasks.test.sequence]]
    cmd = "coverage report"

    [[tool.poe.tasks.test.sequence]]
    cmd = "coverage xml"
